corrected unwanted whitespaces

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -178,7 +178,6 @@ main .hero-section .steps {
 
 .steps-card {
     max-width: 300px;
-    /* border: 2px solid black; */
 }
 
 #card-2 h3 {
@@ -295,14 +294,22 @@ footer p{
 /* Gallery section */
 .gallery-heading {
     height: 100px;
-    align-content: start;
+    text-align: center;
 }
 
 .gallery-images {
     display: grid;
     grid-template-columns:repeat(auto-fit, minmax(250px, 1fr));
     gap:20px;
-    margin: 0 50px;
+    margin: 50px 50px;
+}
+
+.gallery-images img {
+    aspect-ratio: 1/1;
+}
+
+#last-card {
+    margin: 50px 50px;
 }
 
 /* Contact */
@@ -356,7 +363,7 @@ footer p{
     }
 
     .last-card {
-        margin-top: 900px;
+        margin-top: 600px;
     }
 }
 
@@ -373,6 +380,14 @@ footer p{
 
     h1 {
         font-size: 40px;
+    }
+
+    .steps-card {
+    max-width: 200px;
+    }
+
+    .last-card {
+        margin-top: 400px;
     }
 }
 
@@ -430,7 +445,10 @@ footer p{
     }
 
     .last-card {
-        margin-top: 500px;
-        width: 300px;        
+        margin: 500px 60px 100px 60px;
+    }
+
+    #last-card {
+        margin: 80px 60px 80px 60px;
     }
 }
